<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24px"
        android:title="@string/title_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_baseline_receipt_24px"
        android:title="@string/title_order"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_account_box_24px"
        android:title="@string/title_account"
        app:showAsAction="ifRoom" />


</menu>
