<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/style_card_view"
    android:layout_margin="5dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:id="@+id/layout_referral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_login"
                style="@style/style_text_view_bold_center"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/button_close"
                android:layout_toLeftOf="@+id/button_close"
                android:text="@string/title_referral"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/button_close"
                style="@style/style_icon_close"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_close" />

        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            style="@style/style_text_view_normal_center"
            android:text="@string/text_referral_dummy"
            android:textSize="16sp"
            android:padding="@dimen/standard_material_padding"/>

        <android.support.v7.widget.AppCompatTextView
            style="@style/style_text_view_normal_center"
            android:text="@string/text_valid_dummy"
            android:layout_margin="3dp"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/refer_earn"
            style="@style/style_button"
            android:text="@string/refer_and_earn" />

    </LinearLayout>

</android.support.v7.widget.CardView>