<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--android:background="@android:color/transparent"
        android:clipToPadding="true"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"-->

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_text_view_bold_center"
                    android:text="@string/sign_up"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_text_view_normal"
                    android:text="@string/enter_your_name" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/input_name"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    style="@style/style_edit_text" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_text_view_normal"
                    android:text="@string/enter_mobile" />

                <include layout="@layout/layout_mobile" />

                <android.support.v7.widget.AppCompatTextView
                    style="@style/style_text_view_normal"
                    android:text="@string/enter_email" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/input_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    style="@style/style_edit_text" />


                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/layout_change_password"/>


                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/have_referral_code"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/layout_referral"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:weightSum="2">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_referral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:hint="@string/enter_referral"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:layout_margin="5dp"
                        android:maxLines="1" />


                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/check_availability"
                            style="@style/strokeButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:gravity="center"
                            android:layout_weight="1"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="@string/verify"
                            android:textSize="12sp"
                            android:textColor="@android:color/black"/>

                </LinearLayout>


                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submit"
                    style="@style/style_button"
                    android:text="@string/submit" />


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>