<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/style_card_view"
    android:layout_margin="5dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.vvc.ourcustoapp.custom.progressbar.SmoothProgressBar
            android:id="@+id/login_progress_show"
            style="@style/GNowProgressBar"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_login"
                style="@style/style_text_view_bold_center"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/button_close"
                android:layout_toLeftOf="@+id/button_close"
                android:text="@string/login"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/button_close"
               style="@style/style_icon_close"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_close" />

        </RelativeLayout>


        <android.support.v7.widget.AppCompatTextView
            style="@style/style_text_view_normal_center"
            android:text="@string/text_enter_phone" />

        <include layout="@layout/layout_mobile" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login"
            style="@style/style_button"
            android:text="@string/login" />

        <LinearLayout
            android:id="@+id/layout_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3dp">

            <android.support.v7.widget.AppCompatTextView
                style="@style/style_text_view_normal_center"
                android:text="@string/dont_have_account" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sign_up"
                style="@style/style_text_view_bold_center"
                android:text="@string/sign_up" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>

