<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/style_card_view"
    android:layout_margin="5dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:id="@+id/layout_referral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/text_login"
                style="@style/style_text_view_bold_center"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/button_close"
                android:layout_toLeftOf="@+id/button_close"
                android:text="@string/title_change_pwd"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/button_close"
                style="@style/style_icon_close"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_close" />

        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            style="@style/style_text_view_normal"
            android:text="@string/enter_old_pwd" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_old_password"
            android:inputType="text"
            android:maxLines="1"
            style="@style/style_edit_text" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter_new_layout"
            layout="@layout/layout_change_password"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/change_submit"
            style="@style/style_button"
            android:text="@string/title_update" />

    </LinearLayout>
</android.support.v7.widget.CardView>

