<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/layout_logged_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <include
            android:id="@+id/toolbar_layout_normal"
            layout="@layout/toolbar_normal" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical"
                android:padding="3dp">

                <include layout="@layout/layout_user_details" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_my_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <include layout="@layout/layout_logout" />


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_log_out"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="27dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <LinearLayout
                android:id="@+id/layout_login_contain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title"
                    android:layout_margin="10dp"
                    android:textAlignment="center"
                    android:text="@string/title_account"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sub_title"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:text="@string/sub_title_login"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login"
                    style="@style/style_button"
                    android:text="@string/login" />

                <View
                    style="@style/view_bottom_bar"
                    android:layout_height="1.2dp"
                    android:layout_margin="3dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/layout_offers"
                    android:layout_margin="3dp"
                    android:padding="3dp"
                    android:weightSum="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sub_image_drawable"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/ic_baseline_local_offer_24px"/>

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/style_text_drawable_padding"
                        android:id="@+id/sub_title_item"
                        android:layout_weight="1"
                        android:textSize="@dimen/standard_text_size"
                        android:text="@string/title_offers" />

                    <android.support.v7.widget.AppCompatImageView
                        style="@style/style_image_right_arrow"
                        app:srcCompat="@drawable/ic_baseline_navigate_next_24px" />

                </LinearLayout>

                <View
                    style="@style/view_bottom_bar"
                    android:layout_height="1.2dp"
                    android:layout_margin="3dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/layout_feedback"
                    android:layout_margin="3dp"
                    android:padding="3dp"
                    android:weightSum="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:padding="5dp"
                        app:srcCompat="@drawable/ic_baseline_feedback_24px"/>

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/style_text_drawable_padding"
                        android:layout_weight="1"
                        android:textSize="@dimen/standard_text_size"
                        android:text="@string/title_feedback" />

                    <android.support.v7.widget.AppCompatImageView
                        style="@style/style_image_right_arrow"
                        app:srcCompat="@drawable/ic_baseline_navigate_next_24px" />

                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/title_app_version" />

</android.support.design.widget.CoordinatorLayout>