<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <include
        layout="@layout/layout_search_bar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/select_location"
        android:padding="5dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/tag_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:padding="3dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:layout_marginStart="5dp">

            <com.vvc.ourcustoapp.custom.textviews.CustomTextView
                android:id="@+id/tag_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textSize="14sp"
                android:text="@string/current_location"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <com.vvc.ourcustoapp.custom.textviews.CustomTextView
                android:id="@+id/tag_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/enable_location"
                android:textSize="12sp"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="1dp"
        android:layout_marginLeft="55dp"
        android:background="@android:color/black"
        android:layout_marginStart="55dp" />


    <com.vvc.ourcustoapp.custom.textviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tag_saved_address"
        android:text="@string/saved_addresses"
        android:layout_margin="3dp"
        android:padding="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        tools:listitem="@layout/layout_save_addresses" />


</LinearLayout>